-fix bug for lose game state -fix alignment bug

--- a/src/app/wordle_clone/components/LetterSquare.module.scss
+++ b/src/app/wordle_clone/components/LetterSquare.module.scss
@@ -49,7 +49,8 @@
 
 .letter-input {
   display: flex;
-  justify-items: center;
+  justify-content: center;
+  align-items: center;
   font-weight: bold;
   font-size: 2rem;
   padding: 0;
@@ -62,6 +63,7 @@
   caret-color: transparent;
   text-transform: uppercase;
   pointer-events: none;
+  text-align: center;
 
   &:focus-visible {
     outline: none;
